se hicieron cambios de textos y de index, favico, etc.

--- a/config.json
+++ b/config.json
@@ -3,7 +3,8 @@
 		"inicio":"", 
 		"caracteristicas":"",
 		"especificaciones_tecnicas":"", 
-		"contacto":""
+		"contacto":"",
+		"adquirir":""
 	},
 	"modules_path": "modules/"
 }
